--- a/content/blog/紀錄-中岩訓練.md
+++ b/content/blog/紀錄-中岩訓練.md
@@ -1,8 +1,9 @@
 +++
+author = "某人" 
 categories = "登山"
 date = 2021-06-27T16:00:00Z
 description = "中岩訓練好棒棒"
-tags = []
+tags = ["南部","活動"]
 title = "[紀錄] 中岩訓練"
 type = "post"
 
